--- a/src/main/resources/templates/add-ingredients.html
+++ b/src/main/resources/templates/add-ingredients.html
@@ -17,7 +17,7 @@
 			</tr>
 			<tr>
 				<td>Unit</td>
-				<td><input th:field="*{uMO}" /></td>
+				<td><input th:field="*{unit}" /></td>
 			</tr>
 			<tr>
 				<td colspan="2"><input type="submit" value="Submit" /></td>
