--- a/src/main/resources/templates/import-inventory.html
+++ b/src/main/resources/templates/import-inventory.html
@@ -110,7 +110,7 @@
 																	th:text="${inventory.ingredient.ingredientName}"></td>
 
 																<td class=""
-																	th:text="${inventory.uMO}"></td>
+																	th:text="${inventory.unit}"></td>
 																<td class=""><input type="number" name="quantity"
 																	id="quantity" /></td>
 															</tr>
