--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 
 <!-- AnimatedSVGIcons -->
 <link rel="stylesheet" type="text/css"
-	href="@{/fonts/animatedsvgicons/css/codropsicons.css}">
+	th:href="@{/fonts/animatedsvgicons/css/codropsicons.css}">
 
 <!-- c3charts -->
 <link rel="stylesheet" type="text/css"
