--- a/src/main/resources/templates/membership-create.html
+++ b/src/main/resources/templates/membership-create.html
@@ -90,7 +90,7 @@
 
 										<form class="form-horizontal" action="#" th:action="@{/admin/membership/saveMembership}" th:object="${membership}" method="Post">
 											<div class="form-group">
-												<label for="username" class="col-lg-3 control-label">Membership Name</label>
+												<label for="membershipname" class="col-lg-3 control-label">Membership Name</label>
 
 												<div class="col-lg-8">
 													
@@ -100,7 +100,7 @@
 											</div>
 											
 											<div class="form-group">
-												<label class="col-lg-3 control-label">Discount</label>
+												<label class="col-lg-3 control-label" for="membershipdescription">Discount</label>
 												
 												<div class="col-lg-8">
 												<input type="text" id="membershipdescription" class="form-control"
