--- a/src/main/resources/templates/products-list.html
+++ b/src/main/resources/templates/products-list.html
@@ -100,7 +100,10 @@ a {
 										<div class="panel-heading ">
 											<span class="panel-title ptn">Product List</span>
 										</div>
-
+										<div>
+											<a th:href="create"
+											   class="btn btn-rounded btn-primary">Add New Product</a>
+										</div>
 										<div>
 											<div class="table-responsive">
 												<div>
