--- a/src/main/resources/templates/update-recipe.html
+++ b/src/main/resources/templates/update-recipe.html
@@ -111,7 +111,7 @@
 																<td class=""
 																	th:text="${recipe.productIngredient.ingredient.ingredientName}"></td>
 <td class=""
-																	th:text="${recipe.productIngredient.ingredient.uMO}"></td>
+																	th:text="${recipe.productIngredient.ingredient.unit}"></td>
 																<td class="" th:text="${recipe.quantity}"></td>
 																<td>Quantity: <input name="quantity" type="number"></td>
 
