--- a/src/main/resources/templates/update-ingredient.html
+++ b/src/main/resources/templates/update-ingredient.html
@@ -107,7 +107,7 @@
 
 												<div class="col-lg-8">
 													<div class="bs-component">
-														<input type="text" id="vendorName" class="form-control" th:field="*{uMO}"
+														<input type="text" id="vendorName" class="form-control" th:field="*{uUnit}"
 															placeholder="Type Here...">
 													</div>
 												</div>
