--- a/src/main/resources/templates/update-inventory.html
+++ b/src/main/resources/templates/update-inventory.html
@@ -2,49 +2,49 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<!-- Meta and Title -->
-<meta charset="utf-8">
-<title>Index</title>
-<meta name="keywords"
-	content="HTML5, Bootstrap 3, Admin Template, UI Theme" />
-<meta name="description"
-	content="AdminK - A Responsive HTML5 Admin UI Framework">
-<meta name="author" content="ThemeREX">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta and Title -->
+    <meta charset="utf-8">
+    <title>Index</title>
+    <meta name="keywords"
+          content="HTML5, Bootstrap 3, Admin Template, UI Theme"/>
+    <meta name="description"
+          content="AdminK - A Responsive HTML5 Admin UI Framework">
+    <meta name="author" content="ThemeREX">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+    <link rel="shortcut icon" th:href="@{/img/favicon.png}">
 
-<!-- Favicon -->
-<link rel="shortcut icon" th:href="@{/img/favicon.png}">
+    <!-- Angular material -->
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/skin/css/angular-material.min.css}">
 
-<!-- Angular material -->
-<link rel="stylesheet" type="text/css"
-	th:href="@{/skin/css/angular-material.min.css}">
+    <!-- Icomoon -->
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/fonts/icomoon/icomoon.css}">
 
-<!-- Icomoon -->
-<link rel="stylesheet" type="text/css"
-	th:href="@{/fonts/icomoon/icomoon.css}">
+    <!-- AnimatedSVGIcons -->
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/fonts/animatedsvgicons/css/codropsicons.css}">
 
-<!-- AnimatedSVGIcons -->
-<link rel="stylesheet" type="text/css"
-	href="@{/fonts/animatedsvgicons/css/codropsicons.css}">
+    <!-- c3charts -->
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/js/plugins/c3charts/c3.min.css}">
+    <!-- select2 CSS -->
+    <link rel="stylesheet" type="text/css" th:href="@{/js/plugins/select2/css/core.css}">
+    <!-- CSS - allcp forms -->
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/allcp/forms/css/forms.css}">
 
-<!-- c3charts -->
-<link rel="stylesheet" type="text/css"
-	th:href="@{/js/plugins/c3charts/c3.min.css}">
+    <!-- mCustomScrollbar -->
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.min.css}">
 
-<!-- CSS - allcp forms -->
-<link rel="stylesheet" type="text/css"
-	th:href="@{/allcp/forms/css/forms.css}">
+    <!-- CSS - theme -->
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/skin/default_skin/less/theme.css}">
 
-<!-- mCustomScrollbar -->
-<link rel="stylesheet" type="text/css"
-	th:href="@{/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.min.css}">
-
-<!-- CSS - theme -->
-<link rel="stylesheet" type="text/css"
-	th:href="@{/skin/default_skin/less/theme.css}">
-
-<!-- IE8 HTML5 support -->
-<!--[if lt IE 9]>
+    <!-- IE8 HTML5 support -->
+    <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
@@ -53,142 +53,193 @@
 
 <body class="sales-stats-page sb-top sb-top-lg">
 
-	<!-- Body Wrap -->
-	<div id="main">
+<!-- Body Wrap -->
+<div id="main">
 
-		<!-- Header  -->
-		<header th:replace="header::topheader" />
-		<!-- /Header -->
+    <!-- Header  -->
+    <header th:replace="header::topheader"/>
+    <!-- /Header -->
 
-		<!-- Sidebar  -->
-		<aside th:replace="sidebar::sidebar" id="sidebar_left" />
-		<!-- /Sidebar -->
+    <!-- Sidebar  -->
+    <aside th:replace="sidebar::sidebar" id="sidebar_left"/>
+    <!-- /Sidebar -->
 
-		<!-- Main Wrapper -->
-		<section id="content_wrapper" class="mb80">
-
-
-			<section class="content_container">
-
-				<div th:replace="topbar::wrapper" />
-				<header th:replace="topbar::main" />
+    <!-- Main Wrapper -->
+    <section id="content_wrapper" class="mb80">
 
 
+        <section class="content_container">
 
-				<!-- Content -->
-				<section id="content" class="animated fadeIn pt35 pb45">
-					<div class="content-right table-layout">
+            <div th:replace="topbar::wrapper"/>
+            <header th:replace="topbar::main"/>
 
-						<!-- Column Center -->
-						<div class="chute chute-center pbn">
 
-							<!-- Products Status Table -->
-							<div class="row mn">
-								<div class="col-xs-12">
-									<div class="panel">
-										<div class="panel-heading ">
-											<span class="panel-title ptn">Recipe List</span>
-										</div>
+            <!-- Content -->
+            <section id="content" class="animated fadeIn pt35 pb45">
+                <div class="content-right table-layout">
 
-										<div class="panel-body pn mt15">
-											<div class="table-responsive">
-													<div class="section">
-													Ingredient Name: <p th:text="${inventory.ingredient.ingredientName}"></p>
-													</div>
-												<form th:action="@{/admin/inventory/saveInventory}"
-													method="post" th:object="${inventory}">
-													<table
-														class="table allcp-form theme-warning tc-checkbox-1 table-style-2 btn-gradient-grey fs13">
-															<input type="hidden" th:field="*{id}" />
-														<thead>
-															<tr class="">
-																<th class="">Vendor Name</th>
-																<th class="">Unit</th>
-															</tr>
-														</thead>
-														<tbody>
-															<tr>
-													
-																<td class=""><input type="text"
-																	th:field="*{vendorName} "/></td>
-																<td class=""><input type="text" th:field="*{uMO}"/>
-																</td>
-															</tr>
-															<tr>
-																<td colspan="2"><input type="submit" value="Submit" /></td>
-															</tr>
-														</tbody>
-													</table>
-												</form>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
+                    <!-- Column Center -->
+                    <div class="chute chute-center pbn">
 
-						</div>
-						<!-- /Column Center -->
-					</div>
-				</section>
-				<!-- /Content -->
+                        <!-- Products Status Table -->
+                        <div class="row mn">
+                            <form th:action="@{/admin/inventory/saveInventory}"
+                                  method="post" th:object="${inventory}" class="form-horizontal">
+                                <input type="hidden" th:field="*{id}"/>
+                                <div class="">
+                                    <div class="row">
+                                        <div class="col-md-8">
+                                            <!-- Standard Fields -->
+                                            <div class="panel">
+                                                <div class="panel-heading">
+                                                    <span class="panel-title">Magage Inventory</span>
+                                                </div>
+                                                <div class="panel-body">
+                                                    <div class="form-group">
+                                                        <label class="col-lg-3 control-label">Ingredient Name</label>
 
-				<!-- Page Footer -->
-				<footer id="content-footer">
-					<div class="row">
-						<div class="col-md-12 text-center">
+                                                        <div class="col-lg-8">
+                                                            <div class="bs-component">
+                                                                <p class="form-control-static text-muted"
+                                                                   th:text="*{ingredient.ingredientName}"></p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label for="labelName" class="col-lg-3 control-label">Vendor
+                                                            Name</label>
+
+                                                        <div class="col-lg-8">
+                                                            <div class="bs-component">
+                                                                <input type="text" id="labelName" class="form-control"
+                                                                       placeholder="Type Here..."
+                                                                       th:field="*{vendorName}">
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label for="price" class="col-lg-3 control-label">Price</label>
+
+                                                        <div class="col-lg-8">
+                                                            <div class="bs-component">
+                                                                <input type="number" id="price" class="form-control"
+                                                                       placeholder="Type Here..." th:field="*{price}">
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group mbn">
+                                                        <label for="ratio" class="col-lg-3 control-label">Ratio</label>
+                                                        <div class="col-lg-8">
+                                                            <div class="bs-component">
+                                                                <input type="number" id="ratio" class="form-control"
+                                                                       placeholder="Type Here..." th:field="*{ratio}">
+                                                                <span class="help-block mt5">
+                                              <i class="fa fa-bell"></i> Exchange ratio</span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label class="col-lg-3 control-label">Unit</label>
+
+                                                        <div class="col-lg-8">
+                                                            <div class="bs-component">
+                                                                <select class="form-control" th:field="*{unit}">
+                                                                    <option value="">--Select</option>
+                                                                    <option value="bag">Bag</option>
+                                                                    <option value="can">Can</option>
+                                                                </select>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <div class="col-lg-6" style="display: inline">
+                                                            <div class="row">
+
+                                                                <button type="submit" class="btn btn-success">
+                                                                    <i class="fa fa-save"></i>
+                                                                    <span> Save</span>
+                                                                </button>
+
+
+                                                                <button type="reset" class="btn btn-warning">
+                                                                    <i class="fa fa-close"></i>
+                                                                    <span> Cancel</span>
+                                                                </button>
+
+
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+
+                    </div>
+                    <!-- /Column Center -->
+                </div>
+            </section>
+            <!-- /Content -->
+
+            <!-- Page Footer -->
+            <footer id="content-footer">
+                <div class="row">
+                    <div class="col-md-12 text-center">
 							<span class="footer-legal">© 2016 All rights reserved. <a
-								href="#">Therms of use</a> and <a href="#">Privacy policy</a></span>
-						</div>
-					</div>
-				</footer>
-				<!-- /Page Footer -->
+                                    href="#">Therms of use</a> and <a href="#">Privacy policy</a></span>
+                    </div>
+                </div>
+            </footer>
+            <!-- /Page Footer -->
 
-			</section>
-		</section>
+        </section>
+    </section>
 
 
-	</div>
-	<!-- /Body Wrap  -->
+</div>
+<!-- /Body Wrap  -->
+<script th:src="@{http://code.jquery.com/jquery-2.1.1.min.js}"></script>
+<script src="//datatables.net/download/build/nightly/jquery.dataTables.js"></script>
+<script th:src="@{/js/utility/bootstrap/bootstrap.min.js}"></script>
+<!-- Scripts -->
 
-	<!-- Scripts -->
+<!-- jQuery -->
+<!-- AnimatedSVGIcons -->
+<script th:src="@{/fonts/animatedsvgicons/js/snap.svg-min.js}"></script>
+<script th:src="@{/fonts/animatedsvgicons/js/svgicons-config.js}"></script>
+<script th:src="@{/fonts/animatedsvgicons/js/svgicons.js}"></script>
+<script th:src="@{/fonts/animatedsvgicons/js/svgicons-init.js}"></script>
 
-	<!-- jQuery -->
-	<script th:src="@{/js/jquery/jquery-1.12.3.min.js}"></script>
-	<script th:src="@{/js/jquery/jquery_ui/jquery-ui.min.js}"></script>
+<!-- Scroll -->
+<script
+        th:src="@{/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.concat.min.js}"></script>
+<!-- HighCharts Plugin -->
+<script th:src="@{/js/plugins/highcharts/highcharts.js}"></script>
 
-	<!-- AnimatedSVGIcons -->
-	<script th:src="@{/fonts/animatedsvgicons/js/snap.svg-min.js}"></script>
-	<script th:src="@{/fonts/animatedsvgicons/js/svgicons-config.js}"></script>
-	<script th:src="@{/fonts/animatedsvgicons/js/svgicons.js}"></script>
-	<script th:src="@{/fonts/animatedsvgicons/js/svgicons-init.js}"></script>
+<!-- Plugins -->
+<script th:src="@{/js/plugins/c3charts/d3.min.js}"></script>
+<script th:src="@{/js/plugins/c3charts/c3.min.js}"></script>
+<script th:src="@{/js/plugins/circles/circles.js}"></script>
 
-	<!-- Scroll -->
-	<script
-		th:src="@{/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.concat.min.js}"></script>
-	<!-- HighCharts Plugin -->
-	<script th:src="@{/js/plugins/highcharts/highcharts.js}"></script>
+<!-- Jvectormap JS -->
+<script th:src="@{/js/plugins/jvectormap/jquery.jvectormap.min.js}"></script>
+<script
+        th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-us-lcc-en.js}"></script>
+<script
+        th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-world-mill-en.js}"></script>
+<!-- Theme Scripts -->
+<script th:src="@{/js/plugins/select2/select2.min.js}"></script>
+<script th:src="@{/js/utility/utility.js}"></script>
+<script th:src="@{/js/demo/demo.js}"></script>
+<script th:src="@{/js/main.js}"></script>
+<script th:src="@{/js/demo/widgets_sidebar.js}"></script>
+<script th:src="@{/js/pages/dashboard2.js}"></script>
+<script th:src="@{/js/demo/charts/highcharts.js}"></script>
+<!-- /Scripts -->
 
-	<!-- Plugins -->
-	<script th:src="@{/js/plugins/c3charts/d3.min.js}"></script>
-	<script th:src="@{/js/plugins/c3charts/c3.min.js}"></script>
-	<script th:src="@{/js/plugins/circles/circles.js}"></script>
-
-	<!-- Jvectormap JS -->
-	<script th:src="@{/js/plugins/jvectormap/jquery.jvectormap.min.js}"></script>
-	<script
-		th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-us-lcc-en.js}"></script>
-	<script
-		th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-world-mill-en.js}"></script>
-	<!-- Theme Scripts -->
-	<script th:src="@{/js/utility/utility.js}"></script>
-	<script th:src="@{/js/demo/demo.js}"></script>
-	<script th:src="@{/js/main.js}"></script>
-	<script th:src="@{/js/demo/widgets_sidebar.js}"></script>
-	<script th:src="@{/js/pages/dashboard2.js}"></script>
-	<script th:src="@{/js/demo/charts/highcharts.js}"></script>
-	<!-- /Scripts -->
-
-	<!-- /Scripts -->
+<!-- /Scripts -->
 
 </body>
 
