--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -157,14 +157,14 @@
 					style="width: 550px; height: 400px; margin: 0 auto"></div>
 			</div>
 		</div>
-		<script
+<!--		<script
 			src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<!-- Latest compiled and minified JavaScript -->
+		&lt;!&ndash; Latest compiled and minified JavaScript &ndash;&gt;
 		<script
-			src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="https://code.highcharts.com/highcharts.js"></script>
-		<script src="https://code.highcharts.com/modules/exporting.js"></script>
-		<script th:inline="javascript">
+			src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+<!--		<script src="https://code.highcharts.com/highcharts.js"></script>
+		<script src="https://code.highcharts.com/modules/exporting.js"></script>-->
+		<!--<script th:inline="javascript">
     $(function(){
     Highcharts.chart('container', {
         chart: {
@@ -249,7 +249,7 @@
         }]
     });
     });
-</script>
+</script>-->
 	</section>
 
 	<!-- Content Sales Stat Product -->
