--- a/src/main/resources/templates/form-ingredient.html
+++ b/src/main/resources/templates/form-ingredient.html
@@ -40,8 +40,10 @@
 	th:href="@{/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.min.css}">
 
 <!-- CSS - theme -->
-<link rel="stylesheet" type="text/css"
-	th:href="@{/skin/default_skin/less/theme.css}">
+	<link rel="stylesheet" type="text/css"
+		  th:href="@{/skin/default_skin/less/theme.css}">
+	<link rel="stylesheet" type="text/css"
+		  th:href="@{/skin/css/toastr.min.css}">
 
 <!-- IE8 HTML5 support -->
 <!--[if lt IE 9]>
@@ -156,8 +158,9 @@
 	<!-- Scripts -->
 
 	<!-- jQuery -->
-	<script th:src="@{/js/jquery/jquery-1.12.3.min.js}"></script>
-	<script th:src="@{/js/jquery/jquery_ui/jquery-ui.min.js}"></script>
+	<script th:src="@{http://code.jquery.com/jquery-2.1.1.min.js}"></script>
+	<script th:src="@{/js/utility/bootstrap/bootstrap.min.js}"></script>
+	<script th:src="@{/js/toastr.min.js}"></script>
 
 	<!-- AnimatedSVGIcons -->
 	<script th:src="@{/fonts/animatedsvgicons/js/snap.svg-min.js}"></script>
@@ -166,31 +169,68 @@
 	<script th:src="@{/fonts/animatedsvgicons/js/svgicons-init.js}"></script>
 
 	<!-- Scroll -->
-	<script
-		th:src="@{/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.concat.min.js}"></script>
-	<!-- HighCharts Plugin -->
-	<script th:src="@{/js/plugins/highcharts/highcharts.js}"></script>
 
-	<!-- Plugins -->
-	<script th:src="@{/js/plugins/c3charts/d3.min.js}"></script>
-	<script th:src="@{/js/plugins/c3charts/c3.min.js}"></script>
-	<script th:src="@{/js/plugins/circles/circles.js}"></script>
 
-	<!-- Jvectormap JS -->
-	<script th:src="@{/js/plugins/jvectormap/jquery.jvectormap.min.js}"></script>
-	<script
-		th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-us-lcc-en.js}"></script>
-	<script
-		th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-world-mill-en.js}"></script>
 	<!-- Theme Scripts -->
+	<!--
 	<script th:src="@{/js/utility/utility.js}"></script>
-	<script th:src="@{/js/demo/demo.js}"></script>
-	<script th:src="@{/js/main.js}"></script>
+	-->
+
 	<script th:src="@{/js/demo/widgets_sidebar.js}"></script>
-	<script th:src="@{/js/pages/dashboard2.js}"></script>
 	<script th:src="@{/js/demo/charts/highcharts.js}"></script>
 	<!-- /Scripts -->
 
+	<!-- simplebar js -->
+
+
+	<!--Data Tables js-->
+
+	<!-- Jvectormap JS -->
+	<script th:if="${successMsg}">
+		/*<![CDATA[*/
+		toastr.options = {
+			"closeButton": true,
+			"debug": false,
+			"newestOnTop": false,
+			"progressBar": false,
+			"positionClass": "toast-top-right",
+			"preventDuplicates": false,
+			"onclick": null,
+			"showDuration": "300",
+			"hideDuration": "1000",
+			"timeOut": "5000",
+			"extendedTimeOut": "1000",
+			"showEasing": "swing",
+			"hideEasing": "linear",
+			"showMethod": "fadeIn",
+			"hideMethod": "fadeOut"
+		}
+		var message = "[[${successMsg}]]" + " successfully!";
+		toastr.success(message);
+		/*]]>*/
+	</script>
+	<script th:if="lowStockMsg">
+		toastr.options = {
+			"closeButton": true,
+			"debug": false,
+			"newestOnTop": false,
+			"progressBar": false,
+			"positionClass": "toast-top-right",
+			"preventDuplicates": false,
+			"onclick": null,
+			"showDuration": "300",
+			"hideDuration": "1000",
+			"timeOut": "5000",
+			"extendedTimeOut": "1000",
+			"showEasing": "swing",
+			"hideEasing": "linear",
+			"showMethod": "fadeIn",
+			"hideMethod": "fadeOut"
+		}
+		var message = "[[${lowStockMsg}]]";
+		toastr.warning(message);
+		<!-- /Scripts -->
+	</script>
 	<!-- /Scripts -->
 
 </body>
