--- a/src/main/resources/templates/update-inventory.html
+++ b/src/main/resources/templates/update-inventory.html
@@ -42,6 +42,8 @@
     <!-- CSS - theme -->
     <link rel="stylesheet" type="text/css"
           th:href="@{/skin/default_skin/less/theme.css}">
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/skin/css/toastr.min.css}">
 
     <!-- IE8 HTML5 support -->
     <!--[if lt IE 9]>
@@ -155,6 +157,16 @@
                                                         </div>
                                                     </div>
                                                     <div class="form-group">
+                                                        <label for="safetyStock" class="col-lg-3 control-label">Safety Stock</label>
+
+                                                        <div class="col-lg-8">
+                                                            <div class="bs-component">
+                                                                <input type="number" id="safetyStock" class="form-control"
+                                                                       placeholder="Type Here..." th:field="*{safetyStock}">
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group">
                                                         <div class="col-lg-6" style="display: inline">
                                                             <div class="row">
 
@@ -207,42 +219,42 @@
 <script th:src="@{http://code.jquery.com/jquery-2.1.1.min.js}"></script>
 <script src="//datatables.net/download/build/nightly/jquery.dataTables.js"></script>
 <script th:src="@{/js/utility/bootstrap/bootstrap.min.js}"></script>
-<!-- Scripts -->
+<script th:src="@{/js/toastr.min.js}"></script>
 
-<!-- jQuery -->
 <!-- AnimatedSVGIcons -->
 <script th:src="@{/fonts/animatedsvgicons/js/snap.svg-min.js}"></script>
 <script th:src="@{/fonts/animatedsvgicons/js/svgicons-config.js}"></script>
 <script th:src="@{/fonts/animatedsvgicons/js/svgicons.js}"></script>
 <script th:src="@{/fonts/animatedsvgicons/js/svgicons-init.js}"></script>
 
-<!-- Scroll -->
-<script
-        th:src="@{/js/utility/malihu-custom-scrollbar-plugin-master/jquery.mCustomScrollbar.concat.min.js}"></script>
-<!-- HighCharts Plugin -->
-<script th:src="@{/js/plugins/highcharts/highcharts.js}"></script>
-
-<!-- Plugins -->
-<script th:src="@{/js/plugins/c3charts/d3.min.js}"></script>
-<script th:src="@{/js/plugins/c3charts/c3.min.js}"></script>
-<script th:src="@{/js/plugins/circles/circles.js}"></script>
-
-<!-- Jvectormap JS -->
-<script th:src="@{/js/plugins/jvectormap/jquery.jvectormap.min.js}"></script>
-<script
-        th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-us-lcc-en.js}"></script>
-<script
-        th:src="@{/js/plugins/jvectormap/assets/jquery-jvectormap-world-mill-en.js}"></script>
-<!-- Theme Scripts -->
-<script th:src="@{/js/plugins/select2/select2.min.js}"></script>
-<script th:src="@{/js/utility/utility.js}"></script>
-<script th:src="@{/js/demo/demo.js}"></script>
-<script th:src="@{/js/main.js}"></script>
-<script th:src="@{/js/demo/widgets_sidebar.js}"></script>
-<script th:src="@{/js/pages/dashboard2.js}"></script>
-<script th:src="@{/js/demo/charts/highcharts.js}"></script>
 <!-- /Scripts -->
-
+<script>
+    $(document).ready(function() {
+        $('#myTable').DataTable();
+    })
+</script>
+<script th:if="lowStockMsg">
+    toastr.options = {
+        "closeButton": true,
+        "debug": false,
+        "newestOnTop": false,
+        "progressBar": false,
+        "positionClass": "toast-top-right",
+        "preventDuplicates": false,
+        "onclick": null,
+        "showDuration": "300",
+        "hideDuration": "1000",
+        "timeOut": "5000",
+        "extendedTimeOut": "1000",
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut"
+    }
+    var message = "[[${lowStockMsg}]]";
+    toastr.warning(message);
+    <!-- /Scripts -->
+</script>
 <!-- /Scripts -->
 
 </body>
